--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,14 +4,16 @@
 	</head>
 	<body>
 		<div>
-			<h1><a href="/">Django Boys Blog</h1>
+			<h1><a href="/">Django Boys Blog<a></h1>
 		</div>
 		
-		<div>
-			<p>published: 14.06.2014, 12:14</p>
-			<h2><a href="">My first post<a></h2>
-			<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-		</div>
+		{% for post in posts %}
+			<div>
+				<p>published: {{ post.published_date }}</p>
+				<h1><a href="">{{ post.title }}</a></h1>
+				<p>{{ post.text|linebreaksbr }}</p>
+			</div>
+		{% endfor %}
 		
 		<div>
 			<p>published: 14.06.2014, 12:14</p>
